Created list of null values in Age column in Test CSV

--- a/Titanic/titanic_ETD.ipynb
+++ b/Titanic/titanic_ETD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "4  22.0      1      1  3101298  12.2875        S  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -691,27 +691,145 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "deck_values = []\n",
+    "deck_list = []\n",
     "\n",
     "for class_number in test_df_dropped['Pclass']:\n",
     "    if class_number == 1:\n",
-    "        deck_values.append('A,B,C,D,E')\n",
+    "        deck_list.append('A,B,C,D,E')\n",
     "    else:\n",
-    "        deck_values.append('D,E,F,G')\n",
+    "        deck_list.append('D,E,F,G')\n",
     "\n",
-    "test_df_dropped['Deck'] = deck_values\n",
+    "test_df_dropped['Deck'] = deck_list\n",
     "test_df_dropped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Ilieff, Mr. Ylio',\n",
+       " 'Flegenheim, Mrs. Alfred (Antoinette)',\n",
+       " 'Samaan, Mr. Elias',\n",
+       " 'Johnston, Mrs. Andrew G (Elizabeth Lily\" Watson)\"',\n",
+       " 'Roth, Miss. Sarah A',\n",
+       " 'Hee, Mr. Ling',\n",
+       " 'Franklin, Mr. Thomas Parham',\n",
+       " 'Shaughnessy, Mr. Patrick',\n",
+       " 'Mangiavacchi, Mr. Serafino Emilio',\n",
+       " 'Davison, Mr. Thomas Henry',\n",
+       " 'Corey, Mrs. Percy C (Mary Phyllis Elizabeth Miller)',\n",
+       " 'Miles, Mr. Frank',\n",
+       " 'Demetri, Mr. Marinko',\n",
+       " 'Lamb, Mr. John Joseph',\n",
+       " 'Khalil, Mr. Betros',\n",
+       " \"O'Donoghue, Ms. Bridget\",\n",
+       " 'Pedersen, Mr. Olaf',\n",
+       " 'Guest, Mr. Robert',\n",
+       " 'Foley, Mr. William',\n",
+       " 'Ryan, Mr. Edward',\n",
+       " 'Willer, Mr. Aaron (Abi Weller\")\"',\n",
+       " 'Shine, Miss. Ellen Natalia',\n",
+       " 'Thomas, Mr. John',\n",
+       " 'Kiernan, Mr. John',\n",
+       " 'Kennedy, Mr. John',\n",
+       " 'McCoy, Miss. Alicia',\n",
+       " 'Lefebre, Mrs. Frank (Frances)',\n",
+       " 'Thomas, Mr. Charles P',\n",
+       " 'Hilliard, Mr. Herbert Henry',\n",
+       " 'Crafton, Mr. John Bertram',\n",
+       " 'Matinoff, Mr. Nicola',\n",
+       " 'Storey, Mr. Thomas',\n",
+       " 'Smyth, Miss. Julia',\n",
+       " 'Pearce, Mr. Ernest',\n",
+       " 'Cassebeer, Mrs. Henry Arthur Jr (Eleanor Genevieve Fosdick)',\n",
+       " 'Lithman, Mr. Simon',\n",
+       " 'Torfa, Mr. Assad',\n",
+       " 'Lane, Mr. Patrick',\n",
+       " 'Sage, Miss. Ada',\n",
+       " 'Salomon, Mr. Abraham L',\n",
+       " 'Rasmussen, Mrs. (Lena Jacobsen Solvang)',\n",
+       " 'Murphy, Miss. Nora',\n",
+       " 'Omont, Mr. Alfred Fernand',\n",
+       " 'Finoli, Mr. Luigi',\n",
+       " 'Mahon, Miss. Bridget Delia',\n",
+       " 'Thomson, Mr. Alexander Morrison',\n",
+       " 'Moubarek, Mrs. George (Omine Amenia\" Alexander)\"',\n",
+       " 'McNeill, Miss. Bridget',\n",
+       " 'Linehan, Mr. Michael',\n",
+       " 'Hyman, Mr. Abraham',\n",
+       " 'Johnston, Master. William Arthur Willie\"\"',\n",
+       " 'Khalil, Mrs. Betros (Zahie Maria\" Elias)\"',\n",
+       " 'MacKay, Mr. George William',\n",
+       " 'Mahon, Mr. John',\n",
+       " 'Lyntakoff, Mr. Stanko',\n",
+       " 'Chisholm, Mr. Roderick Robert Crispin',\n",
+       " 'Warren, Mr. Charles William',\n",
+       " 'Howard, Miss. May Elizabeth',\n",
+       " 'Fox, Mr. Patrick',\n",
+       " 'Lennon, Miss. Mary',\n",
+       " 'Saade, Mr. Jean Nassr',\n",
+       " 'Fleming, Miss. Honora',\n",
+       " 'Franklin, Mr. Charles (Charles Fardon)',\n",
+       " 'Mardirosian, Mr. Sarkis',\n",
+       " 'Ford, Mr. Arthur',\n",
+       " 'Rheims, Mr. George Alexander Lucien',\n",
+       " 'Nasr, Mr. Mustafa',\n",
+       " 'Samaan, Mr. Hanna',\n",
+       " 'Malachard, Mr. Noel',\n",
+       " 'McCarthy, Miss. Catherine Katie\"\"',\n",
+       " 'Sadowitz, Mr. Harry',\n",
+       " 'Thomas, Mr. Tannous',\n",
+       " 'Betros, Master. Seman',\n",
+       " 'Sage, Mr. John George',\n",
+       " 'van Billiard, Master. James William',\n",
+       " 'Lockyer, Mr. Edward',\n",
+       " \"O'Keefe, Mr. Patrick\",\n",
+       " 'Sage, Mrs. John (Annie Bullen)',\n",
+       " 'Caram, Mr. Joseph',\n",
+       " \"O'Connor, Mr. Patrick\",\n",
+       " 'Risien, Mrs. Samuel (Emma)',\n",
+       " 'Wheeler, Mr. Edwin Frederick\"\"',\n",
+       " 'Riordan, Miss. Johanna Hannah\"\"',\n",
+       " 'Naughton, Miss. Hannah',\n",
+       " 'Spector, Mr. Woolf',\n",
+       " 'Ware, Mr. Frederick',\n",
+       " 'Peter, Master. Michael J']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(test_df_dropped[test_df_dropped.isnull().any(axis=1)]['Name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Mario 1st 29\n",
+    "# Diana 30 - 59\n",
+    "# Savannah 60 - 87"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +1081,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1235,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
