--- a/Titanic/titanic_ETD.ipynb
+++ b/Titanic/titanic_ETD.ipynb
@@ -3726,39 +3726,39 @@
     " {'last_name': 'Farthing', 'first_name': 'Mr John', 'age': ''},\n",
     " {'last_name': 'Toufik', 'first_name': 'Mr Nakli', 'age': ''},\n",
     " {'last_name': 'Peter', 'first_name': 'Mrs Catherine (Catherine Rizk)', 'age': ''},\n",
-    " {'last_name': 'Padro y Manent', 'first_name': 'Mr Julian', 'age': ''},\n",
-    " {'last_name': \"O'Brien\", 'first_name': 'Mr Timothy', 'age': ''},\n",
-    " {'last_name': 'Robbins', 'first_name': 'Mr Victor', 'age': ''},\n",
-    " {'last_name': 'Meanwell', 'first_name': 'Miss (Marion Ogden)', 'age': ''},\n",
-    " {'last_name': 'Doharr', 'first_name': 'Mr Tannous', 'age': ''},\n",
-    " {'last_name': 'Caram', 'first_name': 'Mrs Joseph (Maria Elias)', 'age': ''},\n",
-    " {'last_name': 'Paulner', 'first_name': 'Mr Uscher', 'age': ''},\n",
-    " {'last_name': 'Boulos', 'first_name': 'Mr Hanna', 'age': ''},\n",
-    " {'last_name': 'Harrington', 'first_name': 'Mr Charles H', 'age': ''},\n",
-    " {'last_name': 'Jardin', 'first_name': 'Mr Jose Neto', 'age': ''},\n",
-    " {'last_name': \"O'Connell\", 'first_name': 'Mr Patrick D', 'age': ''},\n",
-    " {'last_name': 'Willey', 'first_name': 'Mr Edward', 'age': ''},\n",
-    " {'last_name': \"O'Leary\", 'first_name': 'Miss Hanora Norah', 'age': ''},\n",
-    " {'last_name': 'Taylor', 'first_name': 'Mrs Elmer Zebley (Juliet Cummins Wright)', 'age': ''},\n",
-    " {'last_name': 'Peters', 'first_name': 'Miss Katie', 'age': ''},\n",
-    " {'last_name': 'Mullens', 'first_name': 'Miss Katherine Katie', 'age': ''},\n",
-    " {'last_name': 'Moubarek', 'first_name': 'Master Halim Gonios (William George)', 'age': ''},\n",
-    " {'last_name': 'Mannion', 'first_name': 'Miss Margareth', 'age': ''},\n",
-    " {'last_name': 'Knight', 'first_name': 'Mr Robert J', 'age': ''},\n",
-    " {'last_name': 'Moran', 'first_name': 'Mr Daniel J', 'age': ''},\n",
-    " {'last_name': 'Kilgannon', 'first_name': 'Mr Thomas J', 'age': ''},\n",
-    " {'last_name': 'Johnston', 'first_name': 'Mr Andrew G', 'age': ''},\n",
-    " {'last_name': 'Keane', 'first_name': 'Mr Andrew Andy', 'age': ''},\n",
-    " {'last_name': 'Sage', 'first_name': 'Miss Stella Anna', 'age': ''},\n",
-    " {'last_name': 'Fry', 'first_name': 'Mr Richard', 'age': ''},\n",
-    " {'last_name': 'Stone', 'first_name': 'Mrs George Nelson (Martha Evelyn)', 'age': ''},\n",
-    " {'last_name': 'Sirota', 'first_name': 'Mr Maurice', 'age': ''},\n",
-    " {'last_name': 'Marechal', 'first_name': 'Mr Pierre', 'age': ''},\n",
-    " {'last_name': 'Goldenberg', 'first_name': 'Mrs Samuel L (Edwiga Grabowska)', 'age': ''},\n",
-    " {'last_name': 'Sage', 'first_name': 'Miss Dorothy Edith Dolly', 'age': ''},\n",
-    " {'last_name': 'van Melkebeke', 'first_name': 'Mr Philemon', 'age': ''},\n",
-    " {'last_name': 'Laleff', 'first_name': 'Mr Kristo', 'age': ''},\n",
-    " {'last_name': 'Johnston', 'first_name': 'Miss Catherine Helen Carrie', 'age': ''}]"
+    " {'last_name': 'Padro y Manent', 'first_name': 'Mr Julian', 'age': 26},\n",
+    " {'last_name': \"O'Brien\", 'first_name': 'Mr Timothy', 'age': 22},\n",
+    " {'last_name': 'Robbins', 'first_name': 'Mr Victor', 'age': 45},\n",
+    " {'last_name': 'Meanwell', 'first_name': 'Miss (Marion Ogden)', 'age': 62},\n",
+    " {'last_name': 'Doharr', 'first_name': 'Mr Tannous', 'age': 28},\n",
+    " {'last_name': 'Caram', 'first_name': 'Mrs Joseph (Maria Elias)', 'age': 28},\n",
+    " {'last_name': 'Paulner', 'first_name': 'Mr Uscher', 'age': 16},\n",
+    " {'last_name': 'Boulos', 'first_name': 'Mr Hanna', 'age': 18},\n",
+    " {'last_name': 'Harrington', 'first_name': 'Mr Charles H', 'age': 37},\n",
+    " {'last_name': 'Jardin', 'first_name': 'Mr Jose Neto', 'age': 21},\n",
+    " {'last_name': \"O'Connell\", 'first_name': 'Mr Patrick D', 'age': 18},\n",
+    " {'last_name': 'Willey', 'first_name': 'Mr Edward', 'age': 20},\n",
+    " {'last_name': \"O'Leary\", 'first_name': 'Miss Hanora Norah', 'age': 16},\n",
+    " {'last_name': 'Taylor', 'first_name': 'Mrs Elmer Zebley (Juliet Cummins Wright)', 'age': 49},\n",
+    " {'last_name': 'Peters', 'first_name': 'Miss Katie', 'age': 27},\n",
+    " {'last_name': 'Mullens', 'first_name': 'Miss Katherine Katie', 'age': 21},\n",
+    " {'last_name': 'Moubarek', 'first_name': 'Master Halim Gonios (William George)', 'age': 4},\n",
+    " {'last_name': 'Mannion', 'first_name': 'Miss Margareth', 'age': 28},\n",
+    " {'last_name': 'Knight', 'first_name': 'Mr Robert J', 'age': 42},\n",
+    " {'last_name': 'Moran', 'first_name': 'Mr Daniel J', 'age': 28},\n",
+    " {'last_name': 'Kilgannon', 'first_name': 'Mr Thomas J', 'age': 21},\n",
+    " {'last_name': 'Johnston', 'first_name': 'Mr Andrew G', 'age': 35},\n",
+    " {'last_name': 'Keane', 'first_name': 'Mr Andrew Andy', 'age': 23},\n",
+    " {'last_name': 'Sage', 'first_name': 'Miss Stella Anna', 'age': 20},\n",
+    " {'last_name': 'Fry', 'first_name': 'Mr Richard', 'age': 39},\n",
+    " {'last_name': 'Stone', 'first_name': 'Mrs George Nelson (Martha Evelyn)', 'age': 61},\n",
+    " {'last_name': 'Sirota', 'first_name': 'Mr Maurice', 'age': 19},\n",
+    " {'last_name': 'Marechal', 'first_name': 'Mr Pierre', 'age': 29},\n",
+    " {'last_name': 'Goldenberg', 'first_name': 'Mrs Samuel L (Edwiga Grabowska)', 'age': 46},\n",
+    " {'last_name': 'Sage', 'first_name': 'Miss Dorothy Edith Dolly', 'age': 14},\n",
+    " {'last_name': 'van Melkebeke', 'first_name': 'Mr Philemon', 'age': 23},\n",
+    " {'last_name': 'Laleff', 'first_name': 'Mr Kristo', 'age': 23},\n",
+    " {'last_name': 'Johnston', 'first_name': 'Miss Catherine Helen Carrie', 'age': 7}]"
    ]
   },
   {
