--- a/Titanic/titanic_ETD.ipynb
+++ b/Titanic/titanic_ETD.ipynb
@@ -3659,39 +3659,39 @@
    "outputs": [],
    "source": [
     "# Creating list to fill ages\n",
-    "manually_fill_train_ages = [{'last_name': 'Moran', 'first_name': 'Mr James', 'age': ''},\n",
-    " {'last_name': 'Masselmani', 'first_name': 'Mrs Fatima', 'age': ''},\n",
-    " {'last_name': 'Emir', 'first_name': 'Mr Farred Chehab', 'age': ''},\n",
-    " {'last_name': \"O'Dwyer\", 'first_name': 'Miss Ellen Nellie', 'age': ''},\n",
-    " {'last_name': 'Spencer', 'first_name': 'Mrs William Augustus (Marie Eugenie)', 'age': ''},\n",
-    " {'last_name': 'Mamee', 'first_name': 'Mr Hanna', 'age': ''},\n",
-    " {'last_name': \"O'Driscoll\", 'first_name': 'Miss Bridget', 'age': ''},\n",
-    " {'last_name': 'Icard', 'first_name': 'Miss Amelie', 'age': ''},\n",
-    " {'last_name': 'Stewart', 'first_name': 'Mr Albert A', 'age': ''},\n",
-    " {'last_name': 'Moubarek', 'first_name': 'Master Gerios', 'age': ''},\n",
-    " {'last_name': 'McDermott', 'first_name': 'Miss Brigdet Delia', 'age': ''},\n",
-    " {'last_name': 'Petroff', 'first_name': 'Mr Pastcho (Pentcho)', 'age': ''},\n",
-    " {'last_name': 'Moran', 'first_name': 'Miss Bertha', 'age': ''},\n",
-    " {'last_name': 'Peter', 'first_name': 'Miss Anna', 'age': ''},\n",
-    " {'last_name': 'Boulos', 'first_name': 'Mrs Joseph (Sultana)', 'age': ''},\n",
-    " {'last_name': 'Chibnall', 'first_name': 'Mrs (Edith Martha Bowerman)', 'age': ''},\n",
-    " {'last_name': 'Baumann', 'first_name': 'Mr John D', 'age': ''},\n",
-    " {'last_name': 'Lefebre', 'first_name': 'Master Henry Forbes', 'age': ''},\n",
-    " {'last_name': 'Pernot', 'first_name': 'Mr Rene', 'age': ''},\n",
-    " {'last_name': \"O'Brien\", 'first_name': 'Mrs Thomas (Johanna Hannah Godfrey)', 'age': ''},\n",
-    " {'last_name': 'Madigan', 'first_name': 'Miss Margaret Maggie', 'age': ''},\n",
-    " {'last_name': 'Nenkoff', 'first_name': 'Mr Christo', 'age': ''},\n",
-    " {'last_name': 'Lefebre', 'first_name': 'Miss Mathilde', 'age': ''},\n",
-    " {'last_name': 'Zabour', 'first_name': 'Miss Thamine', 'age': ''},\n",
-    " {'last_name': 'Murphy', 'first_name': 'Miss Katherine Kate', 'age': ''},\n",
-    " {'last_name': 'Thorne', 'first_name': 'Mrs Gertrude Maybelle', 'age': ''},\n",
-    " {'last_name': 'Smith', 'first_name': 'Mr Thomas', 'age': ''},\n",
-    " {'last_name': 'Henry', 'first_name': 'Miss Delia', 'age': ''},\n",
-    " {'last_name': 'Cairns', 'first_name': 'Mr Alexander', 'age': ''},\n",
-    " {'last_name': 'Healy', 'first_name': 'Miss Hanora Nora', 'age': ''},\n",
-    " {'last_name': 'Parkes', 'first_name': 'Mr Francis Frank', 'age': ''},\n",
-    " {'last_name': 'Lewy', 'first_name': 'Mr Ervin G', 'age': ''},\n",
-    " {'last_name': 'Kelly', 'first_name': 'Miss Anna Katherine Annie Kate', 'age': ''},\n",
+    "manually_fill_train_ages = [{'last_name': 'Moran', 'first_name': 'Mr James', 'age': 10},\n",
+    " {'last_name': 'Masselmani', 'first_name': 'Mrs Fatima', 'age': 22},\n",
+    " {'last_name': 'Emir', 'first_name': 'Mr Farred Chehab', 'age': 26},\n",
+    " {'last_name': \"O'Dwyer\", 'first_name': 'Miss Ellen Nellie', 'age': 22},\n",
+    " {'last_name': 'Spencer', 'first_name': 'Mrs William Augustus (Marie Eugenie)', 'age': 48},\n",
+    " {'last_name': 'Mamee', 'first_name': 'Mr Hanna', 'age': 20},\n",
+    " {'last_name': \"O'Driscoll\", 'first_name': 'Miss Bridget', 'age': 27},\n",
+    " {'last_name': 'Icard', 'first_name': 'Miss Amelie', 'age': 39},\n",
+    " {'last_name': 'Stewart', 'first_name': 'Mr Albert A', 'age': 64},\n",
+    " {'last_name': 'Moubarek', 'first_name': 'Master Gerios', 'age': 7},\n",
+    " {'last_name': 'McDermott', 'first_name': 'Miss Brigdet Delia', 'age': 31},\n",
+    " {'last_name': 'Petroff', 'first_name': 'Mr Pastcho (Pentcho)', 'age': 29},\n",
+    " {'last_name': 'Moran', 'first_name': 'Miss Bertha', 'age': 28},\n",
+    " {'last_name': 'Peter', 'first_name': 'Miss Anna', 'age': 2},\n",
+    " {'last_name': 'Boulos', 'first_name': 'Mrs Joseph (Sultana)', 'age': 40},\n",
+    " {'last_name': 'Chibnall', 'first_name': 'Mrs (Edith Martha Bowerman)', 'age': 48},\n",
+    " {'last_name': 'Baumann', 'first_name': 'Mr John D', 'age': 48},\n",
+    " {'last_name': 'Lefebre', 'first_name': 'Master Henry Forbes', 'age': 5},\n",
+    " {'last_name': 'Pernot', 'first_name': 'Mr Rene', 'age': 39},\n",
+    " {'last_name': \"O'Brien\", 'first_name': 'Mrs Thomas (Johanna Hannah Godfrey)', 'age': 27},\n",
+    " {'last_name': 'Madigan', 'first_name': 'Miss Margaret Maggie', 'age': 21},\n",
+    " {'last_name': 'Nenkoff', 'first_name': 'Mr Christo', 'age': 22},\n",
+    " {'last_name': 'Lefebre', 'first_name': 'Miss Mathilde', 'age': 12},\n",
+    " {'last_name': 'Zabour', 'first_name': 'Miss Thamine', 'age': 19},\n",
+    " {'last_name': 'Murphy', 'first_name': 'Miss Katherine Kate', 'age': 18},\n",
+    " {'last_name': 'Thorne', 'first_name': 'Mrs Gertrude Maybelle', 'age': 37},\n",
+    " {'last_name': 'Smith', 'first_name': 'Mr Thomas', 'age': 26},\n",
+    " {'last_name': 'Henry', 'first_name': 'Miss Delia', 'age': 22},\n",
+    " {'last_name': 'Cairns', 'first_name': 'Mr Alexander', 'age': 28},\n",
+    " {'last_name': 'Healy', 'first_name': 'Miss Hanora Nora', 'age': 33},\n",
+    " {'last_name': 'Parkes', 'first_name': 'Mr Francis Frank', 'age': 21},\n",
+    " {'last_name': 'Lewy', 'first_name': 'Mr Ervin G', 'age': 30},\n",
+    " {'last_name': 'Kelly', 'first_name': 'Miss Anna Katherine Annie Kate', 'age': 20},\n",
     " {'last_name': 'Keane', 'first_name': 'Miss Nora A', 'age': 48},\n",
     " {'last_name': 'Williams', 'first_name': 'Mr Howard Hugh Harry', 'age': 28},\n",
     " {'last_name': 'Fleming', 'first_name': 'Miss Margaret', 'age': 42},\n",
@@ -3726,39 +3726,39 @@
     " {'last_name': 'Farthing', 'first_name': 'Mr John', 'age': 48},\n",
     " {'last_name': 'Toufik', 'first_name': 'Mr Nakli', 'age': 17},\n",
     " {'last_name': 'Peter', 'first_name': 'Mrs Catherine (Catherine Rizk)', 'age': 23},\n",
-    " {'last_name': 'Padro y Manent', 'first_name': 'Mr Julian', 'age': ''},\n",
-    " {'last_name': \"O'Brien\", 'first_name': 'Mr Timothy', 'age': ''},\n",
-    " {'last_name': 'Robbins', 'first_name': 'Mr Victor', 'age': ''},\n",
-    " {'last_name': 'Meanwell', 'first_name': 'Miss (Marion Ogden)', 'age': ''},\n",
-    " {'last_name': 'Doharr', 'first_name': 'Mr Tannous', 'age': ''},\n",
-    " {'last_name': 'Caram', 'first_name': 'Mrs Joseph (Maria Elias)', 'age': ''},\n",
-    " {'last_name': 'Paulner', 'first_name': 'Mr Uscher', 'age': ''},\n",
-    " {'last_name': 'Boulos', 'first_name': 'Mr Hanna', 'age': ''},\n",
-    " {'last_name': 'Harrington', 'first_name': 'Mr Charles H', 'age': ''},\n",
-    " {'last_name': 'Jardin', 'first_name': 'Mr Jose Neto', 'age': ''},\n",
-    " {'last_name': \"O'Connell\", 'first_name': 'Mr Patrick D', 'age': ''},\n",
-    " {'last_name': 'Willey', 'first_name': 'Mr Edward', 'age': ''},\n",
-    " {'last_name': \"O'Leary\", 'first_name': 'Miss Hanora Norah', 'age': ''},\n",
-    " {'last_name': 'Taylor', 'first_name': 'Mrs Elmer Zebley (Juliet Cummins Wright)', 'age': ''},\n",
-    " {'last_name': 'Peters', 'first_name': 'Miss Katie', 'age': ''},\n",
-    " {'last_name': 'Mullens', 'first_name': 'Miss Katherine Katie', 'age': ''},\n",
-    " {'last_name': 'Moubarek', 'first_name': 'Master Halim Gonios (William George)', 'age': ''},\n",
-    " {'last_name': 'Mannion', 'first_name': 'Miss Margareth', 'age': ''},\n",
-    " {'last_name': 'Knight', 'first_name': 'Mr Robert J', 'age': ''},\n",
-    " {'last_name': 'Moran', 'first_name': 'Mr Daniel J', 'age': ''},\n",
-    " {'last_name': 'Kilgannon', 'first_name': 'Mr Thomas J', 'age': ''},\n",
-    " {'last_name': 'Johnston', 'first_name': 'Mr Andrew G', 'age': ''},\n",
-    " {'last_name': 'Keane', 'first_name': 'Mr Andrew Andy', 'age': ''},\n",
-    " {'last_name': 'Sage', 'first_name': 'Miss Stella Anna', 'age': ''},\n",
-    " {'last_name': 'Fry', 'first_name': 'Mr Richard', 'age': ''},\n",
-    " {'last_name': 'Stone', 'first_name': 'Mrs George Nelson (Martha Evelyn)', 'age': ''},\n",
-    " {'last_name': 'Sirota', 'first_name': 'Mr Maurice', 'age': ''},\n",
-    " {'last_name': 'Marechal', 'first_name': 'Mr Pierre', 'age': ''},\n",
-    " {'last_name': 'Goldenberg', 'first_name': 'Mrs Samuel L (Edwiga Grabowska)', 'age': ''},\n",
-    " {'last_name': 'Sage', 'first_name': 'Miss Dorothy Edith Dolly', 'age': ''},\n",
-    " {'last_name': 'van Melkebeke', 'first_name': 'Mr Philemon', 'age': ''},\n",
-    " {'last_name': 'Laleff', 'first_name': 'Mr Kristo', 'age': ''},\n",
-    " {'last_name': 'Johnston', 'first_name': 'Miss Catherine Helen Carrie', 'age': ''}]"
+    " {'last_name': 'Padro y Manent', 'first_name': 'Mr Julian', 'age': 26},\n",
+    " {'last_name': \"O'Brien\", 'first_name': 'Mr Timothy', 'age': 22},\n",
+    " {'last_name': 'Robbins', 'first_name': 'Mr Victor', 'age': 45},\n",
+    " {'last_name': 'Meanwell', 'first_name': 'Miss (Marion Ogden)', 'age': 62},\n",
+    " {'last_name': 'Doharr', 'first_name': 'Mr Tannous', 'age': 28},\n",
+    " {'last_name': 'Caram', 'first_name': 'Mrs Joseph (Maria Elias)', 'age': 28},\n",
+    " {'last_name': 'Paulner', 'first_name': 'Mr Uscher', 'age': 16},\n",
+    " {'last_name': 'Boulos', 'first_name': 'Mr Hanna', 'age': 18},\n",
+    " {'last_name': 'Harrington', 'first_name': 'Mr Charles H', 'age': 37},\n",
+    " {'last_name': 'Jardin', 'first_name': 'Mr Jose Neto', 'age': 21},\n",
+    " {'last_name': \"O'Connell\", 'first_name': 'Mr Patrick D', 'age': 18},\n",
+    " {'last_name': 'Willey', 'first_name': 'Mr Edward', 'age': 20},\n",
+    " {'last_name': \"O'Leary\", 'first_name': 'Miss Hanora Norah', 'age': 16},\n",
+    " {'last_name': 'Taylor', 'first_name': 'Mrs Elmer Zebley (Juliet Cummins Wright)', 'age': 49},\n",
+    " {'last_name': 'Peters', 'first_name': 'Miss Katie', 'age': 27},\n",
+    " {'last_name': 'Mullens', 'first_name': 'Miss Katherine Katie', 'age': 21},\n",
+    " {'last_name': 'Moubarek', 'first_name': 'Master Halim Gonios (William George)', 'age': 4},\n",
+    " {'last_name': 'Mannion', 'first_name': 'Miss Margareth', 'age': 28},\n",
+    " {'last_name': 'Knight', 'first_name': 'Mr Robert J', 'age': 42},\n",
+    " {'last_name': 'Moran', 'first_name': 'Mr Daniel J', 'age': 28},\n",
+    " {'last_name': 'Kilgannon', 'first_name': 'Mr Thomas J', 'age': 21},\n",
+    " {'last_name': 'Johnston', 'first_name': 'Mr Andrew G', 'age': 35},\n",
+    " {'last_name': 'Keane', 'first_name': 'Mr Andrew Andy', 'age': 23},\n",
+    " {'last_name': 'Sage', 'first_name': 'Miss Stella Anna', 'age': 20},\n",
+    " {'last_name': 'Fry', 'first_name': 'Mr Richard', 'age': 39},\n",
+    " {'last_name': 'Stone', 'first_name': 'Mrs George Nelson (Martha Evelyn)', 'age': 61},\n",
+    " {'last_name': 'Sirota', 'first_name': 'Mr Maurice', 'age': 19},\n",
+    " {'last_name': 'Marechal', 'first_name': 'Mr Pierre', 'age': 29},\n",
+    " {'last_name': 'Goldenberg', 'first_name': 'Mrs Samuel L (Edwiga Grabowska)', 'age': 46},\n",
+    " {'last_name': 'Sage', 'first_name': 'Miss Dorothy Edith Dolly', 'age': 14},\n",
+    " {'last_name': 'van Melkebeke', 'first_name': 'Mr Philemon', 'age': 23},\n",
+    " {'last_name': 'Laleff', 'first_name': 'Mr Kristo', 'age': 23},\n",
+    " {'last_name': 'Johnston', 'first_name': 'Miss Catherine Helen Carrie', 'age': 7}]"
    ]
   },
   {
