Created clean csvs to prepare for SQL

--- a/Titanic/titanic_ETD.ipynb
+++ b/Titanic/titanic_ETD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "[86 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "[1317 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
        "[1317 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "       '5m'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
        "948      Kraeff  Mr Theodor  NK"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
        "       '0.4'], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1946,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
        " 4]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2435,7 +2435,7 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2454,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2508,6 +2508,7 @@
     "\n",
     "if test_inserted_ages == test_ages_to_fill:\n",
     "    print('Holy shit you did it')\n",
+    "    test_df_dropped.to_csv('Resources/test_clean.csv')\n",
     "else:\n",
     "    print('Damn you suck')"
    ]
@@ -2521,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2773,7 +2774,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2786,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3061,7 +3062,7 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3082,7 +3083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -3334,7 +3335,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3362,7 +3363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -3547,7 +3548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3568,7 +3569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3604,7 +3605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3843,7 +3844,7 @@
        "[175 rows x 12 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3860,7 +3861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -3978,7 +3979,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3990,7 +3991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4013,7 +4014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -4037,7 +4038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4145,7 +4146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4160,7 +4161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -4343,7 +4344,7 @@
        " 7]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4355,7 +4356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -4607,7 +4608,7 @@
        "[889 rows x 12 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4626,7 +4627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -4662,7 +4663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -4680,6 +4681,7 @@
     "\n",
     "if train_inserted_ages == train_ages_to_fill:\n",
     "    print('Holy shit you did it')\n",
+    "    train_df_dropped.to_csv('Resources/train_clean.csv')\n",
     "else:\n",
     "    print('Damn you suck')"
    ]
@@ -4693,7 +4695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -4799,7 +4801,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4812,7 +4814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
