--- a/Titanic/titanic_ETD.ipynb
+++ b/Titanic/titanic_ETD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "[86 rows x 12 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "[1317 rows x 5 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
        "[1317 rows x 3 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "       '5m'], dtype=object)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
        "948      Kraeff  Mr Theodor  NK"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
        "       '0.4'], dtype=object)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1946,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
        " 4]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -2435,7 +2435,7 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2454,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -2508,7 +2508,7 @@
     "\n",
     "if test_inserted_ages == test_ages_to_fill:\n",
     "    print('Holy shit you did it')\n",
-    "    test_df_dropped.to_csv('Resources/test_clean.csv')\n",
+    "    test_df_dropped.to_csv('Resources/test_clean.csv', index=False)\n",
     "else:\n",
     "    print('Damn you suck')"
    ]
@@ -2522,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2774,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -2822,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -3062,7 +3062,7 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3083,7 +3083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3335,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3363,7 +3363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -3548,7 +3548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3569,7 +3569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -3605,7 +3605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -3844,7 +3844,7 @@
        "[175 rows x 12 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3861,7 +3861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +3979,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3991,7 +3991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4014,7 +4014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -4038,7 +4038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4146,7 +4146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4161,7 +4161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -4344,7 +4344,7 @@
        " 7]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4356,7 +4356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -4608,7 +4608,7 @@
        "[889 rows x 12 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4627,7 +4627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -4663,7 +4663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -4681,7 +4681,7 @@
     "\n",
     "if train_inserted_ages == train_ages_to_fill:\n",
     "    print('Holy shit you did it')\n",
-    "    train_df_dropped.to_csv('Resources/train_clean.csv')\n",
+    "    train_df_dropped.to_csv('Resources/train_clean.csv', index=False)\n",
     "else:\n",
     "    print('Damn you suck')"
    ]
@@ -4695,7 +4695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -4801,7 +4801,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4814,7 +4814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
