--- a/Titanic/Notebooks/extract_transfrom_load.ipynb
+++ b/Titanic/Notebooks/extract_transfrom_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1243,7 @@
        "[418 rows x 13 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
        "[86 rows x 13 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,27 +1626,27 @@
     "place = ['1st', '2nd', '3rd']\n",
     "\n",
     "for table in all_classes_tables:\n",
-    "    table.to_csv(f'../Resources/{place[i]}_class', header=False, index=False)\n",
+    "    table.to_csv(f'../Resources/{place[i]}_class.csv', header=False, index=False)\n",
     "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Merging all csv's into one dataframe \n",
     "pd.concat(map(pd.read_csv, \n",
-    "              ['../Resources/1st_class', \n",
-    "               '../Resources/2nd_class', \n",
-    "               '../Resources/3rd_class']), \n",
-    "               ignore_index=True).to_csv('../Resources/full_online_table', index=False)\n"
+    "              ['../Resources/1st_class.csv', \n",
+    "               '../Resources/2nd_class.csv', \n",
+    "               '../Resources/3rd_class.csv']), \n",
+    "               ignore_index=True).to_csv('../Resources/merged_online_table.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
        "[1317 rows x 5 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1932,7 +1932,7 @@
        "[1317 rows x 3 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
        "       '5m'], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
        "948      Kraeff  Mr Theodor  NK"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2211,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2227,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2243,7 +2243,7 @@
        "       '0.4'], dtype=object)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2389,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2605,7 +2605,7 @@
        " 4]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2623,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2635,7 +2635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2925,7 +2925,7 @@
        "[418 rows x 13 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2939,7 +2939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2970,7 +2970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3247,7 +3247,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3263,7 +3263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3515,7 +3515,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3536,7 +3536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3800,7 +3800,7 @@
        "[891 rows x 13 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3828,7 +3828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -4027,7 +4027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4048,7 +4048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -4085,7 +4085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -4349,7 +4349,7 @@
        "[175 rows x 13 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4367,7 +4367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4485,7 +4485,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4497,7 +4497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4520,7 +4520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4544,7 +4544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4652,7 +4652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4835,7 +4835,7 @@
        " 7]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4854,7 +4854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4866,7 +4866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -5156,7 +5156,7 @@
        "[889 rows x 13 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5170,7 +5170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -5201,7 +5201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5214,7 +5214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5478,7 +5478,7 @@
        "[1307 rows x 13 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
